--- a/src/app/shared/components/header/header.html
+++ b/src/app/shared/components/header/header.html
@@ -134,8 +134,8 @@
         <li class="user-header text-bg-primary">
             <img src="/assets/img/user2-160x160.jpg" class="rounded-circle shadow" alt="User Image">
             <p>
-            Alexander Pierce - Web Developer
-            <small>Member since Nov. 2023</small>
+           Eduardo Bardales Bruno
+            <small>2025</small>
             </p>
         </li>
         <!--end::User Image-->
