--- a/src/app/shared/components/sidebar/sidebar.html
+++ b/src/app/shared/components/sidebar/sidebar.html
@@ -1,111 +1,105 @@
-<!-- <aside class="app-sidebar bg-body-secondary shadow" data-bs-theme="dark"> -->
-<!--begin::Sidebar Brand-->
-<div class="sidebar-brand">
-	<!--begin::Brand Link-->
-	<a class="brand-link" href="/dist/pages/">
-		<!--begin::Brand Image-->
-		<img src="/assets/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image opacity-75 shadow">
-		<!--end::Brand Image-->
-		<!--begin::Brand Text-->
-		<span class="brand-text fw-light">Delitos LTE</span>
-		<!--end::Brand Text-->
-	</a>
-	<!--end::Brand Link-->
-</div>
-<!--end::Sidebar Brand-->
-<!--begin::Sidebar Wrapper-->
+<!-- ...sidebar brand arriba... -->
 <div class="sidebar-wrapper">
-	<nav class="mt-2">
-		<!--begin::Sidebar Menu-->
-	
-<!-- ...existing code... -->
-<ul class="nav sidebar-menu flex-column" data-lte-toggle="treeview" role="menu" data-accordion="false">
-    <li class="nav-header">MENUS</li>
-    
-    <li class="nav-item">
-        <a class="nav-link" 
-        [routerLink]="['']" 
-        routerLinkActive="active"
-        [routerLinkActiveOptions]="{ exact: true }">
-        <i class="nav-icon bi bi-house"></i>
-        <p>Inicio</p>
-        </a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link"
-        [routerLink]="['rolesperson']" 
-        routerLinkActive="active" 
-        [routerLinkActiveOptions]="{ exact: true }">
-        <i class="nav-icon bi bi-file-person"></i>
-        <p>Personas según Rol</p>
-        </a>
-    </li>
-      <li class="nav-item">
-        <a class="nav-link" 
-        [routerLink]="['rolesperson/register']" 
-        routerLinkActive="active" 
-        [routerLinkActiveOptions]="{ exact: true }">
-        <i class="nav-icon bi bi-file-earmark-person-fill"></i>
-        <p>Registrar Persona Rol</p>
-        </a>
-    </li>
-   
-  
-    <li class="nav-item">
-        <a class="nav-link" 
-        [routerLink]="['entidaddistrito']" 
-        routerLinkActive="active" 
-        [routerLinkActiveOptions]="{ exact: true }">
-        <i class="nav-icon bi bi-house-lock-fill"></i>
-        <p>Entidades y Distritos</p>
-        </a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" 
-        [routerLink]="['entidaddistrito/register']" 
-        routerLinkActive="active" 
-        [routerLinkActiveOptions]="{ exact: true }">
-        <i class="nav-icon bi bi-bank"></i>
-        <p>Registrar Entidad/Distrito</p>
-        </a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link"
-        [routerLink]="['personas']" 
-        routerLinkActive="active" 
-        [routerLinkActiveOptions]="{ exact: true }">
-        <i class="nav-icon bi bi-file-person"></i>
-        <p>Personas</p>
-        </a>
-    </li>
-        <li class="nav-item">
-        <a class="nav-link"
-        [routerLink]="['personas/register']" 
-        routerLinkActive="active" 
-        [routerLinkActiveOptions]="{ exact: true }">
-        <i class="nav-icon bi bi-file-person"></i>
-        <p>Registro de Personas</p>
-        </a>
-    </li>
-</ul>
-<!-- ...existing code... -->
+    <nav class="mt-2">
+        <ul class="nav sidebar-menu flex-column" data-lte-toggle="treeview" role="menu" data-accordion="false">
+            <li class="nav-header">MENUS</li>
 
+            <li class="nav-item">
+                <a class="nav-link" [routerLink]="['']" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+                    <i class="nav-icon bi bi-house-door-fill"></i>
+                    <p>Inicio</p>
+                </a>
+            </li>
 
+            <!-- Personas según Rol -->
+            <li class="nav-item has-treeview" [ngClass]="{ 'menu-open': openRolesPerson }">
+                <a class="nav-link" (click)="openRolesPerson = !openRolesPerson">
+                    <i class="nav-icon bi bi-people-fill"></i>
+                    <p>
+                        Personas según Rol
+                        <i class="right bi"
+                           [class.bi-chevron-up]="openRolesPerson"
+                           [class.bi-chevron-down]="!openRolesPerson"></i>
+                    </p>
+                </a>
+                <ul class="nav nav-treeview" [ngClass]="{ 'show': openRolesPerson }">
+                    <li class="nav-item">
+                        <a class="nav-link" [routerLink]="['rolesperson']" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+                            <i class="nav-icon bi bi-person-lines-fill"></i>
+                            <p>Ver Personas según Rol</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" [routerLink]="['rolesperson/register']" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+                            <i class="nav-icon bi bi-person-plus-fill"></i>
+                            <p>Registrar Persona Rol</p>
+                        </a>
+                    </li>
+                </ul>
+            </li>
 
+            <!-- Entidades y Distritos -->
+            <li class="nav-item has-treeview" [ngClass]="{ 'menu-open': openEntidadDistrito }">
+                <a class="nav-link" (click)="openEntidadDistrito = !openEntidadDistrito">
+                    <i class="nav-icon bi bi-building"></i>
+                    <p>
+                        Entidades y Distritos
+                        <i class="right bi"
+                           [class.bi-chevron-up]="openEntidadDistrito"
+                           [class.bi-chevron-down]="!openEntidadDistrito"></i>
+                    </p>
+                </a>
+                <ul class="nav nav-treeview" [ngClass]="{ 'show': openEntidadDistrito }">
+                    <li class="nav-item">
+                        <a class="nav-link" [routerLink]="['entidaddistrito']" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+                            <i class="nav-icon bi bi-bank2"></i>
+                            <p>Ver Entidades y Distritos</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" [routerLink]="['entidaddistrito/register']" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+                            <i class="nav-icon bi bi-building-add"></i>
+                            <p>Registrar Entidad/Distrito</p>
+                        </a>
+                    </li>
+                </ul>
+            </li>
 
+            <!-- Personas -->
+            <li class="nav-item has-treeview" [ngClass]="{ 'menu-open': openPersonas }">
+                <a class="nav-link" (click)="openPersonas = !openPersonas">
+                    <i class="nav-icon bi bi-person-badge-fill"></i>
+                    <p>
+                        Personas
+                        <i class="right bi"
+                           [class.bi-chevron-up]="openPersonas"
+                           [class.bi-chevron-down]="!openPersonas"></i>
+                    </p>
+                </a>
+                <ul class="nav nav-treeview" [ngClass]="{ 'show': openPersonas }">
+                    <li class="nav-item">
+                        <a class="nav-link" [routerLink]="['personas']" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+                           <i class="nav-icon bi bi-people"></i>
+                            <p>Ver Personas</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" [routerLink]="['personas/register']" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+                            <i class="nav-icon bi bi-person-plus"></i>
+                            <p>Registro de Personas</p>
+                        </a>
+                    </li>
+                </ul>
+            </li>
 
-
-
-
-
-
-
-
-
-
-
-		<!--end::Sidebar Menu-->
-	</nav>
+            <!-- Casos -->
+            <li class="nav-item">
+                <a class="nav-link" [routerLink]="['casos']" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+                    <i class="nav-icon bi bi-box"></i>
+                    <p>Casos</p>
+                </a>
+            </li>
+        </ul>
+    </nav>
 </div>
-<!--end::Sidebar Wrapper-->
-<!-- </aside> -->
+<!-- ...sidebar wrapper abajo... -->
